feat: add sample Japanese keys to sample.env

--- a/sample.env
+++ b/sample.env
@@ -26,6 +26,10 @@ ITALIAN_GHOST_API_URL=api_url_from_ghost_dashboard
 ITALIAN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 ITALIAN_GHOST_API_VERSION=v3
 
+JAPANESE_GHOST_API_URL=api_url_from_ghost_dashboard
+JAPANESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+JAPANESE_GHOST_API_VERSION=v3
+
 # ---------------------
 # Search
 # ---------------------
