feat: add Japanese secrets to the Cypress workflow

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -65,5 +65,9 @@ jobs:
           PORTUGUESE_GHOST_API_VERSION: ${{ secrets.PORTUGUESE_GHOST_API_VERSION }}
           PORTUGUESE_GHOST_CONTENT_API_KEY: ${{ secrets.PORTUGUESE_GHOST_CONTENT_API_KEY }}
 
+          JAPANESE_GHOST_API_URL: ${{ secrets.JAPANESE_GHOST_API_URL }}
+          JAPANESE_GHOST_CONTENT_API_KEY: ${{ secrets.JAPANESE_GHOST_CONTENT_API_KEY }}
+          JAPANESE_GHOST_API_VERSION: ${{ secrets.JAPANESE_GHOST_API_VERSION }}
+
           POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
           SITE_DOMAIN: localhost:8080
