--- a/.github/workflows/deploy-eng.yml
+++ b/.github/workflows/deploy-eng.yml
@@ -51,6 +51,11 @@ jobs:
       PORTUGUESE_GHOST_CONTENT_API_KEY:
         ${{ secrets.PORTUGUESE_GHOST_CONTENT_API_KEY }}
 
+      JAPANESE_GHOST_API_URL: ${{ secrets.JAPANESE_GHOST_API_URL }}
+      JAPANESE_GHOST_API_VERSION: ${{ secrets.JAPANESE_GHOST_API_VERSION }}
+      JAPANESE_GHOST_CONTENT_API_KEY:
+        ${{ secrets.JAPANESE_GHOST_CONTENT_API_KEY }}
+
       ADS_ENABLED: ${{ secrets.ADS_ENABLED }}
       GOOGLE_ADSENSE_DATA_AD_CLIENT: ${{ secrets.GOOGLE_ADSENSE_DATA_AD_CLIENT }}
       GOOGLE_ADSENSE_DATA_AD_SLOT: ${{ secrets.GOOGLE_ADSENSE_DATA_AD_SLOT }}
