feat: add NGINX redirect to the trailing slash version of the URL

--- a/mock-www/nginx.conf
+++ b/mock-www/nginx.conf
@@ -17,6 +17,14 @@ server {
    try_files $uri /dothraki/index.html;
  }
 
+ location ~ ^/dothraki/news/([^.\?]*[^/])$ {
+   try_files $uri @addslash;
+ }
+
+ location @addslash {
+   return 301 $uri/;
+ }
+
  location /dothraki/news/ {
    proxy_pass http://news/;
    proxy_set_header X-Real-IP $remote_addr;
