--- a/sample.env
+++ b/sample.env
@@ -30,6 +30,10 @@ JAPANESE_GHOST_API_URL=api_url_from_ghost_dashboard
 JAPANESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 JAPANESE_GHOST_API_VERSION=v3
 
+ARABIC_GHOST_API_URL=api_url_from_ghost_dashboard
+ARABIC_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+ARABIC_GHOST_API_VERSION=v3
+
 # ---------------------
 # Search
 # ---------------------
