--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
     "lint:i18n-schema": "node ./i18n/schema-validation.js",
-    "format": "prettier --ignore-path .gitignore --write ."
+    "format": "prettier --ignore-path .gitignore --write .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -75,11 +76,13 @@
     "eslint-plugin-ghost": "2.12.0",
     "eslint-utils": "3.0.0",
     "graceful-fs": "4.2.9",
+    "husky": "^7.0.4",
     "i18next": "21.6.7",
     "i18next-fs-backend": "1.1.4",
     "jest": "27.4.7",
     "jest-json-schema-extended": "1.0.1",
     "jsdom": "19.0.0",
+    "lint-staged": "^12.3.2",
     "lodash": "4.17.21",
     "md5": "2.3.0",
     "node-fetch": "2.6.7",
@@ -90,5 +93,8 @@
     "shx": "0.3.4",
     "terser": "5.10.0",
     "xml2js": "0.4.23"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
