--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
     "lint:i18n-schema": "node ./i18n/schema-validation.js",
+    "lint:pretty": "prettier --check .",
     "format": "prettier --ignore-path .gitignore --write .",
     "prepare": "husky install"
   },
