--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "test": "jest",
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
-    "lint:i18n-schema": "node ./i18n/schema-validation.js"
+    "lint:i18n-schema": "node ./i18n/schema-validation.js",
+    "lint:pretty": "prettier --check .",
+    "format": "prettier --ignore-path .gitignore --write .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -69,23 +72,30 @@
     "dayjs": "1.10.7",
     "dotenv": "10.0.0",
     "eslint": "8.7.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-ghost": "2.12.0",
     "eslint-utils": "3.0.0",
     "graceful-fs": "4.2.9",
+    "husky": "^7.0.4",
     "i18next": "21.6.7",
     "i18next-fs-backend": "1.1.4",
     "jest": "27.4.7",
     "jest-json-schema-extended": "1.0.1",
     "jsdom": "19.0.0",
+    "lint-staged": "^12.3.2",
     "lodash": "4.17.21",
     "md5": "2.3.0",
     "node-fetch": "2.6.7",
     "npm-run-all": "4.1.5",
+    "prettier": "2.5.1",
     "probe-image-size": "7.2.2",
     "sanitize-html": "2.6.1",
     "shx": "0.3.4",
     "terser": "5.10.0",
     "xml2js": "0.4.23"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
