--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,6 +25,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
+      - name: Set environment variables
+        run: cp sample.env .env
+
       - name: Install dependencies
         run: npm ci
 
