--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,16 @@
-# http://editorconfig.org
-
 root = true
 
 [*]
-charset = utf-8
 indent_style = space
 indent_size = 2
 end_of_line = lf
-insert_final_newline = true
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
 
-[*.hbs]
-insert_final_newline = false
+[package.json]
+indent_style = space
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
-
-
-[Makefile]
-indent_style = tab
