--- a/sample.env
+++ b/sample.env
@@ -34,6 +34,10 @@ ARABIC_GHOST_API_URL=api_url_from_ghost_dashboard
 ARABIC_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 ARABIC_GHOST_API_VERSION=v3
 
+URDU_GHOST_API_URL=api_url_from_ghost_dashboard
+URDU_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+URDU_GHOST_API_VERSION=v3
+
 # ---------------------
 # Search
 # ---------------------
