--- a/sample.env
+++ b/sample.env
@@ -38,6 +38,10 @@ URDU_GHOST_API_URL=api_url_from_ghost_dashboard
 URDU_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 URDU_GHOST_API_VERSION=v3
 
+BENGALI_GHOST_API_URL=api_url_from_ghost_dashboard
+BENGALI_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
+BENGALI_GHOST_API_VERSION=v3
+
 # ---------------------
 # Search
 # ---------------------
