--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -130,7 +130,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        languages: [chinese, espanol, italian, portuguese, japanese, arabic]
+        languages: [
+            chinese,
+            espanol,
+            italian,
+            portuguese,
+            japanese,
+            arabic,
+            # urdu,
+            bengali
+          ]
         site_tlds: [dev, org]
 
     # GitHub's deployment environment configuration.
