--- a/sample.env
+++ b/sample.env
@@ -4,43 +4,43 @@
 
 LOCAL_GHOST_API_URL=api_url_from_ghost_dashboard
 LOCAL_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-LOCAL_GHOST_API_VERSION=v3
+LOCAL_GHOST_API_VERSION=v{major}.{minor}
 
 ENGLISH_GHOST_API_URL=api_url_from_ghost_dashboard
 ENGLISH_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-ENGLISH_GHOST_API_VERSION=v3
+ENGLISH_GHOST_API_VERSION=v{major}.{minor}
 
 ESPANOL_GHOST_API_URL=api_url_from_ghost_dashboard
 ESPANOL_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-ESPANOL_GHOST_API_VERSION=v3
+ESPANOL_GHOST_API_VERSION=v{major}.{minor}
 
 CHINESE_GHOST_API_URL=api_url_from_ghost_dashboard
 CHINESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-CHINESE_GHOST_API_VERSION=v2
+CHINESE_GHOST_API_VERSION=v{major}.{minor}
 
 PORTUGUESE_GHOST_API_URL=api_url_from_ghost_dashboard
 PORTUGUESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-PORTUGUESE_GHOST_API_VERSION=v3
+PORTUGUESE_GHOST_API_VERSION=v{major}.{minor}
 
 ITALIAN_GHOST_API_URL=api_url_from_ghost_dashboard
 ITALIAN_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-ITALIAN_GHOST_API_VERSION=v3
+ITALIAN_GHOST_API_VERSION=v{major}.{minor}
 
 JAPANESE_GHOST_API_URL=api_url_from_ghost_dashboard
 JAPANESE_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-JAPANESE_GHOST_API_VERSION=v3
+JAPANESE_GHOST_API_VERSION=v{major}.{minor}
 
 ARABIC_GHOST_API_URL=api_url_from_ghost_dashboard
 ARABIC_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-ARABIC_GHOST_API_VERSION=v3
+ARABIC_GHOST_API_VERSION=v{major}.{minor}
 
 URDU_GHOST_API_URL=api_url_from_ghost_dashboard
 URDU_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-URDU_GHOST_API_VERSION=v3
+URDU_GHOST_API_VERSION=v{major}.{minor}
 
 BENGALI_GHOST_API_URL=api_url_from_ghost_dashboard
 BENGALI_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
-BENGALI_GHOST_API_VERSION=v3
+BENGALI_GHOST_API_VERSION=v{major}.{minor}
 
 # ---------------------
 # Search
