--- a/mock-www/nginx.conf
+++ b/mock-www/nginx.conf
@@ -3,21 +3,21 @@ upstream news {
   server news:3000;
 }
 
-server { 
+server {
  listen 80;
  server_name learn;
- 
+
  root /usr/share/nginx/html;
 
  location / {
    try_files $uri /index.html;
  }
- 
+
  location /dothraki/ {
    try_files $uri /dothraki/index.html;
  }
 
- location /dothraki/news/ {
+ location /italian/news/ {
    proxy_pass http://news/;
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
