--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -87,7 +87,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          # cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
@@ -97,8 +96,8 @@ jobs:
         env:
           NODE_ENV: production
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Docker login to Azure Container Registry
         uses: azure/docker-login@v1
