--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "develop:ci": "cross-env ELEVENTY_ENV=ci NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
     "prebuild": "npm run clean",
     "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
+    "postbuild": "node ./config/i18n/generate-serve-config.js",
     "test": "jest",
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
-    "lint:i18n-schema": "node ./i18n/schema-validation.js",
+    "lint:i18n-schema": "node ./config/i18n/schema-validation.js",
     "lint:pretty": "prettier --check .",
     "format": "prettier --write .",
     "prepare": "husky install"
@@ -86,6 +87,7 @@
     "jest-json-schema-extended": "1.0.1",
     "js-yaml": "4.1.0",
     "jsdom": "19.0.0",
+    "json-merge-patch": "1.0.2",
     "lint-staged": "12.5.0",
     "lodash": "4.17.21",
     "md5": "2.3.0",
