--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -102,8 +102,8 @@ jobs:
         env:
           NODE_ENV: production
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@dc7b9719a96d48369863986a06765841d7ea23f6 # tag=v2
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@dc7b9719a96d48369863986a06765841d7ea23f6 # tag=v2
 
       - name: Docker login to Azure Container Registry
         uses: azure/docker-login@81744f9799e7eaa418697cb168452a2882ae844a # tag=v1
