chore: enable deployment

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -151,8 +151,10 @@ jobs:
             bengali,
             chinese,
             espanol,
+            french,
             italian,
             japanese,
+            korean,
             portuguese,
             swahili,
             urdu
