fix: update Cypress scripts in package.json

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
     "cypress": "cypress",
-    "cypress:run:english": "npm run cypress -- run --spec 'cypress/integration/english/**/*'",
-    "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/integration/chinese/**/*'",
-    "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/integration/espanol/**/*'",
+    "cypress:run:english": "npm run cypress -- run --spec 'cypress/e2e/english/**/*'",
+    "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/e2e/chinese/**/*'",
+    "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/e2e/espanol/**/*'",
     "cypress:watch": "npm run cypress -- open",
     "dev": "npm run develop",
     "predevelop": "npm run clean",
