--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "clean:error-logs": "shx rm -f *-errors.log",
     "clean:dist": "shx rm -rf dist/",
     "cypress": "cypress",
-    "cypress:run:english": "npm run cypress -- run --spec 'cypress/integration/english/**/*'",
-    "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/integration/chinese/**/*'",
-    "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/integration/espanol/**/*'",
+    "cypress:run:english": "npm run cypress -- run --spec 'cypress/e2e/english/**/*'",
+    "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/e2e/chinese/**/*'",
+    "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/e2e/espanol/**/*'",
     "cypress:watch": "npm run cypress -- open",
     "dev": "npm run develop",
     "predevelop": "npm run clean",
@@ -71,7 +71,7 @@
     "@tryghost/helpers": "1.1.71",
     "clean-css": "5.3.1",
     "cross-env": "7.0.3",
-    "cypress": "9.7.0",
+    "cypress": "10.4.0",
     "dayjs": "1.11.4",
     "dotenv": "16.0.1",
     "eslint": "8.19.0",
