fix: update ad related entries in sample.env

--- a/sample.env
+++ b/sample.env
@@ -53,8 +53,8 @@ ALGOLIA_API_KEY=api_key_from_algolia_dashboard
 # Monetization
 # ---------------------
 
-ADS_ENABLED=false
-GOOGLE_ADSENSE_DATA_AD_CLIENT=pub-1234567890
+ADS_ENABLED=true
+GOOGLE_ADSENSE_DATA_AD_CLIENT=ca-pub-1234567890
 GOOGLE_ADSENSE_DATA_AD_SLOT=1234567890
 
 # ---------------------
