feat: add mock ad related env variables to Cypress GH Action workflow

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,6 +30,10 @@ jobs:
       ESPANOL_GHOST_API_VERSION: ${{ secrets.CI_ESPANOL_GHOST_API_VERSION }}
       ESPANOL_GHOST_CONTENT_API_KEY: ${{ secrets.CI_ESPANOL_GHOST_CONTENT_API_KEY }}
 
+      ADS_ENABLED: true
+      GOOGLE_ADSENSE_DATA_AD_CLIENT: ca-pub-1234567890
+      GOOGLE_ADSENSE_DATA_AD_SLOT: 1234567890
+
       POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
 
       SITE_DOMAIN: localhost:8080
