--- a/.github/workflows/crowdin-upload.yml
+++ b/.github/workflows/crowdin-upload.yml
@@ -9,7 +9,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_SERVICE_TOKEN }}
   CROWDIN_API_URL: 'https://freecodecamp.crowdin.com/api/v2/'
-  CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID_DOCS }}
+  CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID_NEWS }}
 
 jobs:
   i18n-upload-docs-files:
