--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -6,7 +6,7 @@ on:
   #   - cron: '0 13 * * 1-5'
 
 env:
-  GITHUB_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_PAT }}
+  CAMPERBOT_GITHUB_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_PAT }}
   CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID_NEWS }}
   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_SERVICE_TOKEN }}
   CROWDIN_API_URL: 'https://freecodecamp.crowdin.com/api/v2/'
