chore(tools): fix action name

--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -1,4 +1,4 @@
-name: i18n - Download Docs
+name: i18n - Download News
 on:
   workflow_dispatch:
   # schedule:
@@ -12,8 +12,8 @@ env:
   CROWDIN_API_URL: 'https://freecodecamp.crowdin.com/api/v2/'
 
 jobs:
-  i18n-download-docs-translations:
-    name: Docs
+  i18n-download-news-translations:
+    name: News
     runs-on: ubuntu-20.04
 
     steps:
@@ -26,7 +26,7 @@ jobs:
         uses: freecodecamp/crowdin-action@main
         env:
           PLUGIN: 'generate-config'
-          PROJECT_NAME: 'docs'
+          PROJECT_NAME: 'news'
 
       # ##### Download Chinese #####
       # - name: Crowdin Download Chinese Translations
