--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -28,34 +28,34 @@ jobs:
           PLUGIN: 'generate-config'
           PROJECT_NAME: 'news'
 
-      # ##### Download Chinese #####
-      # - name: Crowdin Download Chinese Translations
-      #   uses: crowdin/github-action@master
-      #   # options: https://github.com/crowdin/github-action/blob/master/action.yml
-      #   with:
-      #     # uploads
-      #     upload_sources: false
-      #     upload_translations: false
-      #     auto_approve_imported: false
-      #     import_eq_suggestions: false
+        ##### Download Brazilian Portuguese #####
+      - name: Crowdin Download Portuguese (Brazilian) Translations
+        uses: crowdin/github-action@master
+        # options: https://github.com/crowdin/github-action/blob/master/action.yml
+        with:
+          # uploads
+          upload_sources: false
+          upload_translations: false
+          auto_approve_imported: false
+          import_eq_suggestions: false
 
-      #     # downloads
-      #     download_translations: true
-      #     download_language: zh-CN
-      #     skip_untranslated_files: false
-      #     export_only_approved: true
+          # downloads
+          download_translations: true
+          download_language: pt-BR
+          skip_untranslated_files: false
+          export_only_approved: true
 
-      #     push_translations: false
+          push_translations: false
 
-      #     # pull-request
-      #     create_pull_request: false
+          # pull-request
+          create_pull_request: false
 
-      #     # global options
-      #     config: './crowdin-config.yml'
-      #     base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
+          # global options
+          config: './crowdin-config.yml'
+          base_url: ${{ secrets.CROWDIN_BASE_URL_FCC }}
 
-      #     # Uncomment below to debug
-      #     # dryrun_action: true
+          # Uncomment below to debug
+          # dryrun_action: true
 
       # # Convert Simplified Chinese to Traditional #
       # - name: Convert Chinese
@@ -71,8 +71,8 @@ jobs:
           PLUGIN: 'commit-changes'
           GH_USERNAME: 'camperbot'
           GH_EMAIL: ${{ secrets.ACTIONS_CAMPERBOT_EMAIL }}
-          GH_BRANCH: 'i18n-sync-docs'
-          GH_MESSAGE: 'chore(i18n,docs): processed translations'
+          GH_BRANCH: 'i18n-sync'
+          GH_MESSAGE: 'chore(i18n): processed translations'
 
       # Generate PR #
       # All languages should go ABOVE this. #
@@ -82,10 +82,10 @@ jobs:
         env:
           PLUGIN: 'pull-request'
           GH_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_PAT }}
-          BRANCH: 'i18n-sync-docs'
+          BRANCH: 'i18n-sync'
           REPOSITORY: 'freecodecamp/freecodecamp'
           BASE: 'main'
-          TITLE: 'chore(i18n,docs): processed translations'
+          TITLE: 'chore(i18n): processed translations'
           BODY: 'This PR was opened auto-magically by Crowdin.'
           LABELS: 'crowdin-sync'
           TEAM_REVIEWERS: 'i18n'
