--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -83,7 +83,7 @@ jobs:
           PLUGIN: 'pull-request'
           GH_TOKEN: ${{ secrets.CROWDIN_CAMPERBOT_PAT }}
           BRANCH: 'i18n-sync'
-          REPOSITORY: 'freecodecamp/freecodecamp'
+          REPOSITORY: 'freecodecamp/news'
           BASE: 'main'
           TITLE: 'chore(i18n): processed translations'
           BODY: 'This PR was opened auto-magically by Crowdin.'
