feat: enable Ukrainian News deployments

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -168,6 +168,7 @@ jobs:
             korean,
             portuguese,
             swahili,
+            ukrainian,
             urdu
           ]
         site_tlds: [org]
